--- a/index.html
+++ b/index.html
@@ -58,13 +58,8 @@
             color: #475569;
         }
 
-        .close-btn {
-            right: 1rem;
-        }
-
-        .back-button {
-            left: 1rem;
-        }
+        .close-btn { right: 1rem; }
+        .back-button { left: 1rem; }
 
         .header {
             text-align: center;
@@ -390,23 +385,24 @@
             font-size: 0.875rem;
         }
 
-        /* PAGE 4 - STYLES DIRECTS SPOTICAR */
+        /* PAGE 4 - STYLES DESKTOP AÉRÉS */
         #page-4 {
             display: flex;
             flex-direction: column;
             height: 100%;
-            gap: 2rem;
-            padding: 2rem 1rem;
+            gap: 1.5rem;
+            padding: 1rem 1rem 1.5rem;
+            overflow-y: auto;
         }
 
-        .price-section {
+        #page-4 .price-section {
             background: #f8fafc;
-            padding: 2rem 1rem;
+            padding: 1.5rem;
             border-radius: 12px;
             text-align: center;
         }
 
-        .price-badge {
+        #page-4 .price-badge {
             background: #13d0ca;
             color: white;
             padding: 0.5rem 1rem;
@@ -417,7 +413,7 @@
             font-family: Arial, sans-serif;
         }
 
-        .price-amount {
+        #page-4 .price-amount {
             font-size: 2.5rem;
             color: #13d0ca;
             font-weight: 800;
@@ -425,21 +421,21 @@
             font-family: Arial, sans-serif;
         }
 
-        .price-disclaimer {
+        #page-4 .price-disclaimer {
             font-size: 0.85rem;
             color: #64748b;
             line-height: 1.4;
         }
 
-        .explanation-section {
+        #page-4 .explanation-section {
             background: white;
             border: 1px solid #e2e8f0;
             border-radius: 12px;
-            padding: 2rem 1rem;
+            padding: 1.5rem;
             text-align: center;
         }
 
-        .explanation-title {
+        #page-4 .explanation-title {
             font-size: 1.1rem;
             font-weight: 700;
             margin-bottom: 1rem;
@@ -447,19 +443,19 @@
             font-family: Arial, sans-serif;
         }
 
-        .explanation-text {
+        #page-4 .explanation-text {
             font-size: 0.9rem;
             color: #64748b;
             line-height: 1.5;
         }
 
-        .benefits-section {
+        #page-4 .benefits-section {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 1.5rem;
         }
 
-        .benefit-card {
+        #page-4 .benefit-card {
             background: white;
             border: 1px solid #e2e8f0;
             border-radius: 8px;
@@ -467,7 +463,7 @@
             text-align: center;
         }
 
-        .benefit-title {
+        #page-4 .benefit-title {
             font-size: 0.85rem;
             font-weight: 700;
             color: #1e293b;
@@ -476,15 +472,16 @@
             font-family: Arial, sans-serif;
         }
 
-        .benefit-description {
+        #page-4 .benefit-description {
             font-size: 0.8rem;
             color: #64748b;
             line-height: 1.4;
         }
 
-        .cta-section {
+        #page-4 .cta-section {
             text-align: center;
             margin-top: auto;
+            padding-top: 1rem;
         }
 
         @media (max-width: 768px) {
@@ -566,39 +563,27 @@
                 height: auto;
             }
 
+            .reassurance {
+                padding: 0.75rem 1rem;
+                font-size: 0.7rem;
+                margin-top: 0.75rem;
+            }
+
             /* Page 4 mobile */
             #page-4 {
-                gap: 1.5rem;
+                gap: 1rem;
                 padding: 3rem 1rem 1rem;
                 overflow-y: auto;
                 height: 100%;
             }
 
-            .price-section {
-                padding: 1.5rem 1rem;
+            #page-4 .price-amount {
+                font-size: 1.8rem;
             }
 
-            .price-amount {
-                font-size: 2rem;
-            }
-
-            .explanation-section {
-                padding: 1.5rem 1rem;
-            }
-
-            .benefits-section {
+            #page-4 .benefits-section {
                 grid-template-columns: 1fr;
-                gap: 1rem;
-            }
-
-            .benefit-card {
-                padding: 1rem;
-            }
-            
-            .reassurance {
-                padding: 0.75rem 1rem;
-                font-size: 0.7rem;
-                margin-top: 0.75rem;
+                gap: 0.75rem;
             }
         }
     </style>
@@ -809,14 +794,17 @@
             </div>
         </div>
 
-        <!-- Page 4: Résultat - SPOTICAR DESIGN -->
+        <!-- Page 4: Résultat - SPOTICAR -->
         <div class="page" id="page-4">
             <!-- Section Prix -->
             <div class="price-section">
-                <div class="price-badge">✓ Estimation validée</div>
+                <div class="price-badge">✓ Estimation finalisée</div>
                 <div class="price-amount">13 350 € <sup style="font-size: 0.4em; color: #64748b;">(1)</sup></div>
+                <div style="font-size: 0.75rem; color: #64748b; margin-bottom: 1rem;">
+                    Peugeot 3008 • 1.2 PureTech 130 Active
+                </div>
                 <div class="price-disclaimer">
-                    (1) L'estimation peut varier en point de vente. Expire dans 10 jours.
+                    (1) L'estimation peut varier lors de votre rendez-vous en point de vente. Notre estimation expire dans 10 jours. Valable jusqu'au 04/10/2025
                 </div>
             </div>
 
@@ -824,7 +812,7 @@
             <div class="explanation-section">
                 <h3 class="explanation-title">Comment avons-nous calculé ce prix ?</h3>
                 <p class="explanation-text">
-                    Notre estimation repose sur les caractéristiques de votre véhicule et l'analyse du marché.
+                    Notre estimation repose sur les caractéristiques de votre véhicule et sur l'analyse des tendances du marché. Elle inclut une déduction forfaitaire pour les frais de remise en état, ajustable en fonction de l'état réel de votre voiture.
                 </p>
             </div>
 
